# nexusAI

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.agents/: AGENTS.md
backend/: .env.example  Dockerfile  GEMINI.md  README.md  pyproject.toml  server.py
backend/app/: __init__.py  gates.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py
backend/app/arbiter/: aggregator.py  decision_engine.py  models.py  resolver.py
backend/app/core/: config.py  dependencies.py  event_bus.py  event_publisher.py  logger.py  middleware.py  mission_manager.py
backend/app/escalation/: models.py  service.py  storage.py  summarizer.py  tts.py
backend/app/gemma/: client.py  models.py  reviewer.py  service.py  summarizer.py
backend/app/models/: __init__.py  claim.py  decision.py  decision_packet.py  enums.py  event.py  evidence.py  evidence_bundle.py  execution_plan.py  health.py  mission.py  mission_context.py
backend/app/pattern/: detectors.py  engine.py  loader.py  models.py  summarizer.py
backend/app/policy/: engine.py  evaluator.py  loader.py  rules.py
backend/app/providers/: __init__.py
backend/app/schemas/: __init__.py
backend/policies/: company_policy.yaml
backend/scripts/: __init__.py  deploy_cloud_run.sh  smoke_test.py
backend/shared/: events.md
backend/tests/: __init__.py  test_arbiter_agent.py  test_event_core.py  test_gemma_service.py  test_human_escalation.py  test_intake_agent.py  test_pattern_agent.py  test_planner_agent.py  test_policy_agent.py  test_provider_agent.py  test_sse_playback.py
(+46 files in other folders)
