[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
    "pyyaml>=6.0.1",
    "google-cloud-storage>=2.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
